历史的三峡 勘误

--- a/【其他】网课水课/历史的三峡.md
+++ b/【其他】网课水课/历史的三峡.md
@@ -35,14 +35,14 @@
 - 《观察》创办者：**储安平**
 - 提出五四思想充满"两歧性"的学者：**张灏**
 - 最早提出"大我小我"，最早使用"中华民族"，不属于晚清革命派的阵营
-  ，提出“我们的爱国,一面不能知有国家不知有个人,一面不能知有国家不知有世界”：**梁启超**
+  ，提出“我们的爱国,一面不能知有国家不知有个人,一面不能知有国家不知有世界”,
+  在中国思想史的脉络中,最早发现富强与文明对近代中国的意义的是严复和：**梁启超**
 - 《进化论和伦理学》作者：**赫胥黎**
 - 在 1939 年的《边疆周刊》上发表了《中华民族是一个》：**顾颉刚**
 - 提出"与其入阁,不如组党。与其组党,不如办报"：**傅斯年**
-- 在"科玄论战"中推崇唯心主义哲学,被称为"玄学鬼"的是：**阎锡山**
 - 晚清立宪派的领袖是：**张謇**
 - 晚清提出"中学为体,西学为用"的是：**张之洞**
-- 20 世纪 30 年代文化民族主义的代表人物，”玄学鬼“：**张君劢**
+- 20 世纪 30 年代文化民族主义的代表人物，被称作”玄学鬼“：**张君劢**
 - 在晚清提出"俱分进化论",批判当时盛行的社会达尔文主义：**章太炎**
 - 《仁学》中大力主张个人的解放：**谭嗣同**
 
@@ -61,4 +61,4 @@
 
 ---
 
-© 2024 TuningLuna. 版权所有。
+© 2025 TuningLuna. 版权所有。
